# pixoo-gui

./: Cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.tsx  main.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
