[package]
name = "pixoo-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.6", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.10", features = [ "macos-private-api", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0.0-alpha.0"
tauri-plugin-shell = "2.0.0-alpha.0"
tauri-plugin-cli = "2.0.0-alpha.0"
tauri-plugin-window = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
